--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -14,21 +15,24 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">WebSiteName</a>
+          <a class="navbar-brand" id="home">VisitJapan.jp</a>
         </div>
         <ul class="nav navbar-nav">
           <li class="active">
-            <a id="home">Home</a>
+            <a id="mount-fuji">Mount Fuji</a>
           </li>
           <li>
-            <a id="mount-fuji">Page 1</a>
+            <a id="tokyo">Tokyo</a>
           </li>
           <li>
-            <a href="#">Page 2</a>
+            <a id="osaka">Osaka</a>
           </li>
-          <li>
-            <a href="#">Page 3</a>
-          </li>
+            <li>
+                <a id="kyoto">Kyoto</a>
+            </li>
+            <li>
+                <a id="fukuoka">Fukuoka</a>
+            </li>
         </ul>
       </div>
     </nav>
