--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+      <link rel="icon" type="img/ico" href="favicon.ico">
+      <title>VisitJapan.jp</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -19,7 +21,7 @@
         </div>
         <ul class="nav navbar-nav">
           <li class="active">
-            <a id="mount-fuji">Mount Fuji</a>
+              <a id="mount-fuji">Mount Fuji</a>
           </li>
           <li>
             <a id="tokyo">Tokyo</a>
